[tool.poetry]
name = "corise-dagster"
version = "0.2.0"
description = "CoRise Dagster."
authors = ["Dennis Hume <hume.dennis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.11,>=3.8.0"
dagster = "1.2.4"
dagit = "1.2.4"
dagstermill = "0.18.4"
dagster-aws = "0.18.4"
dagster-postgres = "0.18.4"
dagster-docker = "0.18.4"
dagster-dbt = "0.18.4"
dbt-postgres = "^1.2.0"
pydantic = "^1.9.0"
redis = "^4.0.0"
boto3 = "^1.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.11.1"
mypy = "^0.910"
black = "^22.1.0"
flake8 = "^3.9.0"
flake8-bugbear = "^21.3.2"
isort = "^5.9.3"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
